@@ -3,6 +3,9 @@ What's New in IDLE 2.7a0?
 
 *Release date: XX-XXX-2009*
 
+- idle.py modified and simplified to better support developing experimental
+  versions of IDLE which are not installed in the standard location.
+
 - OutputWindow/PyShell right click menu "Go to file/line" wasn't working with
   file paths containing spaces.  Bug 5559.
 
